[gd_scene load_steps=8 format=3 uid="uid://dveayri1dmfaa"]

[ext_resource type="Script" uid="uid://dynrpeblyxbyp" path="res://levels/main.gd" id="1_m1504"]
[ext_resource type="Script" uid="uid://cm7nb01xglcgc" path="res://menus/context_menu.gd" id="2_ifaiv"]
[ext_resource type="Script" uid="uid://dbn7lmvkw7k2m" path="res://levels/requests_list.gd" id="3_ifaiv"]
[ext_resource type="PackedScene" uid="uid://o6gfmcnpmhxq" path="res://widgets/new_folder_popup.tscn" id="4_m1504"]
[ext_resource type="PackedScene" uid="uid://culsb5w1vso6o" path="res://menus/request_menu.tscn" id="4_qy63d"]

[sub_resource type="Theme" id="Theme_ig7tw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ig7tw"]
bg_color = Color(0.7330457, 0.761021, 0.76061004, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m1504")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ig7tw")
theme_override_styles/panel = SubResource("StyleBoxFlat_ig7tw")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="MenuBar" type="MenuBar" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("2_ifaiv")

[node name="File" type="PopupMenu" parent="Panel/MarginContainer/VBoxContainer/MenuBar"]
oversampling_override = 1.0

[node name="Edit" type="PopupMenu" parent="Panel/MarginContainer/VBoxContainer/MenuBar"]

[node name="View" type="PopupMenu" parent="Panel/MarginContainer/VBoxContainer/MenuBar"]

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="RequestsList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/VSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NewButtons" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/VSplitContainer/RequestsList"]
layout_mode = 2

[node name="NewLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/VSplitContainer/RequestsList/NewButtons"]
clip_contents = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "New"

[node name="NewRequest" type="Button" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/VSplitContainer/RequestsList/NewButtons"]
layout_mode = 2
text = "Request"

[node name="NewFolder" type="Button" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/VSplitContainer/RequestsList/NewButtons"]
layout_mode = 2
text = "Folder"

[node name="DeleteRequest" type="Button" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/VSplitContainer/RequestsList/NewButtons"]
layout_mode = 2
text = "Delete"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/VSplitContainer/RequestsList"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/VSplitContainer/RequestsList"]
layout_mode = 2
size_flags_vertical = 3

[node name="Requests" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/VSplitContainer/RequestsList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3_ifaiv")

[node name="RequestMenuContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="RequestOverview" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/RequestMenuContainer" instance=ExtResource("4_qy63d")]
visible = false
layout_mode = 2

[node name="NewFolderPopup" parent="Panel" instance=ExtResource("4_m1504")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -263.5
offset_top = -123.5
offset_right = 263.5
offset_bottom = 123.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="id_pressed" from="Panel/MarginContainer/VBoxContainer/MenuBar/File" to="Panel/MarginContainer/VBoxContainer/MenuBar" method="_on_file_id_pressed"]
[connection signal="button_down" from="Panel/MarginContainer/VBoxContainer/HSplitContainer/VSplitContainer/RequestsList/NewButtons/NewRequest" to="." method="_on_new_request_button_down"]
[connection signal="button_down" from="Panel/MarginContainer/VBoxContainer/HSplitContainer/VSplitContainer/RequestsList/NewButtons/NewFolder" to="." method="_on_new_folder_button_down"]
